php display_errors comment and log_errors enabled

--- a/.gitignore
+++ b/.gitignore
@@ -1,20 +1,16 @@
 config.php
 db_config.php
-errors.log
+*.log
 js/dojo-ucscis/
 js/dojo-release/
 lib/
-messages.log
 modules.php
 permission.php
 .DS_Store
 js/dojo-custom-build/dojo-release-*
-sql.log
 ._.DS_Store
 classes/.fuse_hidden000000820000000a
-full.csv
 img/._.DS_Store
 js/._.DS_Store
 js/dojo-release
 mod
-query.sql
